test/driver/unknown_option.al
// RUN: (compiler -unknown || true) 2>&1 | filecheck %s
// CHECK: error: unexpected option '-unknown'
